@@ -1,4 +1,3 @@
 displayName = Mushroom Mod
 author = Liam
 version = 0.1
-modReferences = GlowMaskAPI
