@@ -11,9 +11,6 @@
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="GlowMaskAPI">
-      <HintPath>..\..\..\..\..\..\Downloads\GlowMaskAPI.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Xna.Framework.Graphics">
       <HintPath>..\..\..\..\..\..\Downloads\Microsoft.Xna.Framework.Graphics.dll</HintPath>
     </Reference>
